--- a/Formato Memoria/Capitulo1/1.2_Definicion_Problema.tex
+++ b/Formato Memoria/Capitulo1/1.2_Definicion_Problema.tex
@@ -1,5 +1,5 @@
 Tras lo expuesto en el punto anterior, el problema radica en la manera de realizar la rendición, debido a que cuando esta es creada por el solicitante, no existe ningún método que valide la correcta realización de esta, sino que una vez enviada y revisada por contraloría se obtiene una respuesta, y si esta es negativa la devolución del dinero tarda más de lo normal.
 
-Por otro lado, el departamento de contraloría se encuentra en Talca y se debe enviar la documentación por valija hasta aquel lugar. Por lo tanto, se pierde tiempo en enviar la documentación esperar a que controlaría lo revise (no siempre envían un reporte completo de los errores que tiene la rendición). En efecto, en algunos casos notifican los errores individualmente lo que elentence mucho el proceso.
+Por otro lado, el departamento de contraloría se encuentra en Talca y se debe enviar la documentación por valija hasta aquel lugar. Por lo tanto, se pierde tiempo en enviar la documentación esperar a que controlaría lo revise (no siempre envían un reporte completo de los errores que tiene la rendición). En efecto, en algunos casos notifican los errores individualmente lo que enlentece mucho el proceso.
 
 Finalmente, cabe destacar que sólo el Presidente, Tesorero o Secretario de Finanzas de Federación o CAA pueden realizar una solicitud de fondo, por lo que si se quiere realizar otra actividad y solicitar fondos a la universidad, se debe esperar a que no existan rendiciones pendientes.
