--- a/Formato Memoria/Capitulo1/1.3_Presentacion_Solucion.tex
+++ b/Formato Memoria/Capitulo1/1.3_Presentacion_Solucion.tex
@@ -1,13 +1,13 @@
-En base al problema descrito anteriormente es que nace este proyecto el cual trata de un sistema web que permita a las distintas O.E. la creación de rendiciones, las cuales cumplan con el formato estipulado por la RU N\grad 2083.
+En base al problema descrito anteriormente es que nace este proyecto el cual trata de un sistema web que permita a las distintas O.E. la creación de rendiciones, las cuales cumplan con el formato estipulado por la RU N\grad 2083 del año 2017.
 
-Esta señala los posibles errores por los cuales una rendición pueda ser rechazada, como por ejemplo, montos superiores a lo solicitado, boletas fuera del plazo en que se realiza la actividad, entre otros.
+Ésta señala los posibles errores por los cuales una rendición pueda ser rechazada, como, por ejemplo, montos superiores a lo solicitado, boletas fuera del plazo en que se realiza la actividad, entre otros.
 
-Además los usuarios pueden tener un respaldo de las resoluciones realizadas.
+Además, los usuarios pueden tener un respaldo de las resoluciones realizadas.
 
 También contiene un instructivo de cómo realizar una rendición según los estándares que estipula la Universidad.   
 
 Por otra parte, al ingresar todas las boletas al sistema, este busca el óptimo monto de la suma de estas que sean igual o lo más cercana al monto solicitado.
 
-En caso de que una rendición no sea completada, esta se guarde pero con estado pendiente.
+En caso de que una rendición no sea completada, esta se guarde, pero con estado pendiente.
 
 La aplicación verifica que la rendición se realice dentro del periodo estipulado por la RU N\grad 2083 del año 2017 la cual dice que son 20 días contado desde el último acto administrativo de la transferencia de recursos.
