--- a/Formato Memoria/Capitulo1/1.4_Objetivos.tex
+++ b/Formato Memoria/Capitulo1/1.4_Objetivos.tex
@@ -1,6 +1,6 @@
 \subsection{Objetivo general}
     \begin{itemize}
-        \item Sistematizar el proceso de confección de la solicitud de un fondo por rendir para actividades estudiantiles y su posterior rendición de gastos, de acuerdo al marco definido por la RU N\grad 2083 del año 2017.
+        \item Sistematizar el proceso de confección de la solicitud de un fondo por rendir para actividades estudiantiles y su posterior rendición de gastos, de acuerdo con el marco definido por la RU N\grad 2083 del año 2017.
     \end{itemize}
 
 \subsection{Objetivos específicos} 
