--- a/Formato Memoria/Capitulo1/1.7_Descripcion_Contenidos.tex
+++ b/Formato Memoria/Capitulo1/1.7_Descripcion_Contenidos.tex
@@ -1,4 +1,3 @@
-Este documento, ademas de este capítulo, se divide en <cantidad de capítulos> capítulos. El capítulo dos hace referencia a los antecedentes necesarios para la comprensión del contexto en que se desarrolla el proyecto.
+Este documento, además de este capítulo, se divide en <cantidad de capítulos> capítulos. El capítulo dos hace referencia a los antecedentes necesarios para la comprensión del contexto en que se desarrolla el proyecto.
 
-En cuanto al capitulo tres, hace mención de la metodología que se utiliza, los requisitos del sistema, ademas de la forma en que se prioriza y estima el proyecto.
-
+En cuanto al capítulo tres, hace mención de la metodología que se utiliza, los requisitos del sistema, además de la forma en que se prioriza y estima el proyecto.
