--- a/Formato Memoria/Capitulo2/2.3_Pruebas.tex
+++ b/Formato Memoria/Capitulo2/2.3_Pruebas.tex
@@ -1,5 +1,5 @@
 Para el proyecto, se utiliza la metodología con experimentos controlados como método de evaluación. Esta maneja pruebas que se hacen bajo condiciones totalmente constante y en algunos casos, puede variar algún factor. El objetivo principal es realizar un muestreo de usuarios conocidos los cuales utilizan el software con pruebas de usabilidad simples, además del cliente.
 
-Por otra parte, los usuarios que realicen las pruebas de usabilidad  no necesariamente deben ser los mismos.
+Por otra parte, los usuarios que realicen las pruebas de usabilidad no necesariamente deben ser los mismos.
 
-Para finalizar, el motivo por el cual se escoge este metodología de evaluación se debe a que hace posible la comprensión e identificación de las variables que están siendo utilizadas en la construcción del software.  Todo lo anterior se debe ya que, según el artículo \emph{Albert Einstein and Empirical Software Engineering}~\cite{8}, experimentar con la construcción de software permite ``Aumentar la compresion de lo que hace al software bueno y cómo hacer un software bien''\footnote{Gain more understanding of what makes software ``good'' and how to make software well.}.
+Para finalizar, el motivo por el cual se escoge esta metodología de evaluación se debe a que hace posible la comprensión e identificación de las variables que están siendo utilizadas en la construcción del software.  Todo lo anterior se debe ya que, según el artículo \emph{Albert Einstein and Empirical Software Engineering}~\cite{8}, experimentar con la construcción de software permite ``Aumentar la compresión de lo que hace al software bueno y cómo hacer un software bien''\footnote{Gain more understanding of what makes software ``good'' and how to make software well.}.
