--- a/Formato Memoria/memoria.tex
+++ b/Formato Memoria/memoria.tex
@@ -49,7 +49,7 @@ Dedicado a ...
 	\subfile{Capitulo1/1.2_Definicion_Problema}
 
 	\section{Presentación de la solución}
-	\subfile{Capitulo1/1.2_Definicion_Problema}
+	\subfile{Capitulo1/1.3_Presentacion_Solucion}
 
 	\section{Objetivos}
 	\subfile{Capitulo1/1.4_Objetivos}
