--- a/Formato Memoria/Capitulo1/1.5_Alcances.tex
+++ b/Formato Memoria/Capitulo1/1.5_Alcances.tex
@@ -1,21 +1,27 @@
-Se realiza un sistema web de gestión de rendiciones para Federación y CAA de la Facultad de Ingeniería de la Universidad de Talca, en el cual se podrán realizar las siguientes funciones:
+La aplicación, SimRend, es un sistema web de gestión de rendiciones para Federación y CAA de la Facultad de Ingeniería de la Universidad de Talca, en el cual se podrán realizar las siguientes funciones:
 
 \begin{itemize}
-	\item Realizar solicitudes de fondos por rendir que detallen en que se utiliza el dinero, participantes de la actividad, periodo en la que se realiza y responsable.
+    \item Realizar solicitudes de fondos por rendir que detallen en que se utiliza el dinero, participantes de la actividad, periodo en la que se realiza y responsable.
+    
+    \item Generar PDF de Solicitud de fondos por rendir.
 
-	\item Gestionar rendiciones de fondos por rendir que detallen los gastos incurridos de una actividad tras ser aprobada su correspondiente solicitud.
-	
-	\item Búsqueda de rendiciones realizadas por filtrado tales como fecha o número de rendición.
-	
-	\item Visualización detallada de rendiciones.
-	
-	\item Búsqueda de suma de montos de gastos de la rendición, similar o igual al monto solicitud, mas no superior.
-	
-	\item Validación de fechas de boletas ingresadas dentro de la actividad realizada.
+    \item Gestionar rendiciones de fondos por rendir que detallen los gastos incurridos de una actividad tras ser aprobada su correspondiente solicitud.
+    
+    \item Búsqueda de rendiciones realizadas por filtrado tales como fecha o número de rendición.
+    
+    \item Visualización detallada de rendiciones.
+    
+    \item Búsqueda de suma de montos de gastos de la rendición, similar o igual al monto solicitud, mas no superior.
+    
+    \item Validación de fechas de boletas ingresadas dentro de la actividad realizada.
+    
+    \item Generar listado de boletas a rendir junto con una sección en donde el usuario pueda agregar en que hoja se pega la boleta que se rinde.
+    
+    \item Generar la división de las hojas para pegar las boletas que se rinden.
 \end{itemize}
 
 \begin{itemize}
-	\item 	\begin{description}
-			    \item[Nota:] Cabe destacar que el sistema opera bajo la RU N\grad 2083 del año 2017.
-			\end{description}
+    \item   \begin{description}
+                \item[Nota:] Cabe destacar que el sistema opera bajo la RU N\grad 2083 del año 2017.
+            \end{description}
 \end{itemize}
