--- a/Formato Memoria/Capitulo1/1.5_Alcances.tex
+++ b/Formato Memoria/Capitulo1/1.5_Alcances.tex
@@ -1,7 +1,7 @@
-La aplicación, SimRend, es un sistema web de gestión de rendiciones para Federación y CAA de la Facultad de Ingeniería de la Universidad de Talca, en el cual se podrán realizar las siguientes funciones:
+La aplicación, \emph{SimRend}, es un sistema web de gestión de rendiciones para Federación y CAA de la Facultad de Ingeniería de la Universidad de Talca, en la cual sólo se pueden realizar las siguientes funciones:
 
 \begin{itemize}
-    \item Realizar solicitudes de fondos por rendir que detallen en que se utiliza el dinero, participantes de la actividad, periodo en la que se realiza y responsable.
+    \item Realizar solicitudes de fondos por rendir que detallen en qué se utiliza el dinero, participantes de la actividad, periodo en la que se realiza y su responsable.
     
     \item Generar PDF de Solicitud de fondos por rendir.
 
@@ -15,9 +15,13 @@ La aplicación, SimRend, es un sistema web de gestión de rendiciones para Feder
     
     \item Validación de fechas de boletas ingresadas dentro de la actividad realizada.
     
-    \item Generar listado de boletas a rendir junto con una sección en donde el usuario pueda agregar en que hoja se pega la boleta que se rinde.
+    \item Generar listado de boletas a rendir junto con una sección en donde el usuario pueda agregar en qué hoja se pega la boleta que se rinde.
     
     \item Generar la división de las hojas para pegar las boletas que se rinden.
+    
+    \item  Cabe destacar que el sistema opera bajo la RU N\grad 2083 del año 2017.
+    
+    \item Por último, en esta aplicación se excluyen los Grupos Intermedios
 \end{itemize}
 
 \begin{itemize}
