--- a/Formato Memoria/memoria.tex
+++ b/Formato Memoria/memoria.tex
@@ -4,7 +4,7 @@
 %\usepackage[utf8]{inputenc} % Caracteres con acentos.
 
 %% datos generales y para la tapa
-\titulo{Gestión de fondos para actividades estudiantiles conducidas por CCAA o la Fedeut Curicó en acuerdo a la RU N\grad 2083 del año 2017}
+\titulo{Gestión de fondos para actividades estudiantiles conducidas por CCAA o la Fedeut Curicó en acuerdo a la RU N\grad 2083 de 2017}
 \author{Yorch Sepúlveda}
 \supervisor{Rodrigo Paredes Moraleda}
 \informantes
@@ -57,7 +57,7 @@ Dedicado a ...
 	\section{Alcances}
 	\subfile{Capitulo1/1.5_Alcances}
 
-	\section{Proyectos Similares}
+	\section{Proyectos similares}
 	\subfile{Capitulo1/1.6_Proyectos_Similares}
 
 	\section{Descripción de contenidos}
