--- a/Formato Memoria/Capitulo1/1.1_Contexto.tex
+++ b/Formato Memoria/Capitulo1/1.1_Contexto.tex
@@ -1,4 +1,4 @@
-El ``Plan estratégico de la Universidad de Talca Visión 2020'', destaca el apoyo a todo tipo de actividades emprendidas por las distintas Organizaciones Estudiantiles reconocidas. Entre las actividades destacan: recepción de alumnos nuevos, celebración del día de la carrera, actividades culturales y deportivas, actividades sociales, entre otras~\cite{5}.
+El ``Plan estratégico de la Universidad de Talca Visión 2020'' destaca el apoyo a todo tipo de actividades emprendidas por las distintas Organizaciones Estudiantiles reconocidas. Entre las actividades destacan: recepción de alumnos nuevos; celebración del día de la carrera; actividades sociales, culturales y deportivas; entre otras~\cite{5}.
 
 %\begin{figure}[!p]
 %  \vspace*{1cm}
@@ -12,24 +12,32 @@ El ``Plan estratégico de la Universidad de Talca Visión 2020'', destaca el apo
     \caption{\label{fig: Solicitud_Federacion}Proceso de Fondos por Rendir por parte de Fedeut.}
 \end{figure}
 
-Para la realización de estas actividades se debe seguir un procedimiento, el cual está estipulado en la RU N\grad 2083 creada el 12 de diciembre del 2017, la cual dice:
+Para la realización de estas actividades se debe seguir un procedimiento, el cual está estipulado en la RU N\grad 2083 promulgada el 12 de diciembre del 2017, la cual dice:
 
 \begin{tasks}[counter-format = {tsk[A].}]
     \task \textbf{Caso Federación y Organizaciones Estudiantiles:}
 
-    Sólo el Presidente, Tesorero o Secretario de finanzas pueden solicitar por escrito Fondos para realizar actividades. Esta solicitud se envía a quien dirige la Dirección del DAAE, de la Vicerrectoría de Desarrollo Estudiantil, al menos 20 días antes del inicio de la actividad. 
+    Sólo el Presidente, Tesorero o Secretario de finanzas de la Federación (Fedeut) o uno de Grupos Intermedios pueden solicitar por escrito Fondos para realizar actividades. Esta solicitud se envía a quien dirige la Dirección de Apoyo a Actividades Estudiantiles (DAAE), de la Vicerrectoría de Desarrollo Estudiantil (VDE), al menos 20 días antes del inicio de la actividad. 
 
-    Quien dirige la DAAE verifica la solicitud enviada por Fedeut y una vez aprobada, realiza y envía otra solicitud a quien dirige la VDE.
+    Quien dirige la DAAE, una vez que verifica la solicitud enviada por Fedeut o Grupo Intermedio y una vez aprobada, realiza y envía otra solicitud a quien dirige la VDE.
 
     Luego de que quien dirige la VDE verifica y aprueba la solicitud de Fondo, emite una Resolución Exenta en original y cuatro copias las cuales son enviadas a Contraloría de la Universidad de Talca para su respectivo control de legalidad. 
     
-    Una vez tramitado el acto administrativo, se debe distribuir los documentos anteriormente mencionados, de la siguiente forma: el documento original para el archivo de la Secretaría General, la primera copia para el Departamento de Tesorería y Presupuesto, la segunda, para el archivo de la Vicerrectoría Estudiantil, la tercera, enviada a la O.E. interesada y la cuarta, para la unidad de Gobierno Transparente.
+    Una vez tramitado el acto administrativo, se debe distribuir los documentos anteriormente mencionados de la siguiente forma: 
+
+    \begin{itemize}
+        \item La documentación original la archiva Secretaría General.
+        \item La primera copia es enviada al Departamento de Tesorería y Presupuesto.
+        \item La segunda para el archivo de la Vicerrectoría Estudiantil.
+        \item La tercera es enviada a la Federación o Grupo Intermedio interesada.
+        \item La cuarta es enviada a la Unidad de Gobierno Transparente.
+    \end{itemize}
 
     Este proceso se puede apreciar con mayor detalle en la \textbf{Figura \ref{fig: Solicitud_Federacion}}.
 
     \task \textbf{Caso de Centros de Alumnos}
 
-    Sólo el Presidente, Tesorero o Secretario de finanzas pueden solicitar por escrito Fondos para realizar actividades. Esta solicitud se envía a quien dirige la Dirección de Escuela correspondiente al menos 20 días antes del inicio de la actividad. 
+    Sólo el Presidente, Tesorero o Secretario de finanzas del Centro de Alumnos (CAA) pueden solicitar por escrito Fondos para realizar actividades. Esta solicitud se envía a quien dirige la Dirección de Escuela correspondiente al menos 20 días antes del inicio de la actividad. 
 
     Quien dirige la Dirección de Escuela, una vez que verifica la solicitud enviada por el CAA, eleva la solicitud a quien dirige la Decanatura de la Facultad o a quien dirige la Vicerrectoría de Desarrollo Estudiantil (para el caso de las Escuelas no adscritas a una Facultad).
 
@@ -40,9 +48,8 @@ Para la realización de estas actividades se debe seguir un procedimiento, el cu
         \item La documentación original la archiva Decanato o VDE.
         \item La primera copia es enviada al Departamento de Tesorería y Presupuesto.
         \item La segunda para el archivo de la Facultad.
-        \item La tercera es enviada a la O.E. interesada.
+        \item La tercera es enviada al CAA interesado.
         \item La cuarta es enviada a la Unidad de Gobierno Transparente.
-
     \end{itemize}
 
     Se puede apreciar con mayor detalle en la \textbf{Figura \ref{fig: Solicitud_CAA}}.
@@ -54,7 +61,7 @@ Para la realización de estas actividades se debe seguir un procedimiento, el cu
     \caption{\label{fig: Solicitud_CAA}Proceso fondos por rendir por parte de CAA.}
 \end{figure}
 
-En ambos casos, el Departamento de Presupuesto hace responsable de la actividad presupuestaria correspondiente a la O.E que la solicita.
+En ambos casos, el Departamento de Presupuesto hace responsable de la actividad presupuestaria correspondiente a la O.E. (ya sea Fedeut, CAA o Grupo Intermedio) que la solicita.
 
 El Departamento de Tesorería emite el pago a nombre del Presidente, Tesorero o Secretario de Finanzas de la O.E. y adjunta la segunda copia de la Resolución al Comprobante de Egreso para la posterior rendición del Fondo.
 
@@ -65,5 +72,5 @@ Al representante de la O.E. se le asigna las siguientes responsabilidades:
     \item Mantener un registro detallado de los gastos establecidos en el presupuesto de la actividad aprobada.
     \item Ejecutar/Realizar los gastos autorizados para la actividad.
     \item Rendir el Fondo asignado para la actividad.
-    \item Respaldar gastos con la documentación idónea, tal como establece la Resolución Universitaria N\grad 522/1992, punto N\grad 12. 
+    \item Respaldar gastos con la documentación idónea, tal como establece la Resolución Universitaria N\grad 522 de 1992, punto N\grad 12. 
 \end{itemize} 
