--- a/Formato Memoria/Capitulo1/1.1_Contexto.tex
+++ b/Formato Memoria/Capitulo1/1.1_Contexto.tex
@@ -7,8 +7,8 @@ El ``Plan estratégico de la Universidad de Talca Visión 2020'' destaca el apoy
 %  \caption{\label{fig: Solicitud_Federacion}Proceso de Fondos por Rendir por parte de Fedeut.}
 %\end{figure}
 
-\begin{figure}[p!]
-    \includegraphics[width=\textwidth]{Imagenes/Solicitud_Federacion.jpg}
+\begin{figure}[htbp!]
+    \includegraphics[width=\textwidth]{Imagenes/Solicitud_Federacion.png}
     \caption{\label{fig: Solicitud_Federacion}Proceso de Fondos por Rendir por parte de Fedeut.}
 \end{figure}
 
@@ -56,8 +56,9 @@ Para la realización de estas actividades se debe seguir un procedimiento, el cu
 
 \end{tasks}
 
-\begin{figure}[p!]
-    \includegraphics[width=\textwidth]{Imagenes/Solicitud_CCAA.jpg}
+\begin{figure}[tb!]
+    \centering
+    \includegraphics[width=\textwidth]{Imagenes/Solicitud_CCAA.png}
     \caption{\label{fig: Solicitud_CAA}Proceso fondos por rendir por parte de CAA.}
 \end{figure}
 
