--- a/Formato Memoria/Capitulo2/2.1.1_Conceptos.tex
+++ b/Formato Memoria/Capitulo2/2.1.1_Conceptos.tex
@@ -1,10 +1,12 @@
+Para profundizar lo explicado en el contexto del problema que se encuentra en la sección 1.1 del primer capítulo del presente documento, es que hace mención a los conceptos claves para la comprensión del proceso el cual se rige la aplicación.
+
 \textbf{Evento}
 
-  Un evento según el ``Plan estratégico de la Universidad de Talca Visión 2020'' es una actividad emprendida por las distintas Organizaciones Estudiantiles reconocidas tales como recepción de alumnos nuevos, celebración del dia de la carrera, actividades culturales y deportivas, actividades sociales, entre otras ~\cite{5}. 
+  Un evento según el ``Plan estratégico de la Universidad de Talca Visión 2020'' es una actividad emprendida por las distintas Organizaciones Estudiantiles reconocidas tales como recepción de alumnos nuevos, celebración del día de la carrera, actividades culturales y deportivas, actividades sociales, entre otras ~\cite{5}. 
 
 \textbf{Solicitud}
 
-  Una solicitud es un documento en el cual se pide ayuda económica a quien dirige la Dirección de Escuela(en el caso de CAA) o a quien dirige la DAAE (en el caso de Federación) para llevar a cabo un evento organizado por la Organización Estudiantil. 
+  Una solicitud es un documento en el cual se pide ayuda económica a quien dirige la Dirección de Escuela (en el caso de CAA) o a quien dirige la DAAE (en el caso de Federación) para llevar a cabo un evento organizado por la Organización Estudiantil. 
 
   En el documento debe ir detallado:
   \begin{itemize}
@@ -23,10 +25,80 @@
 
   En este documento se menciona la suma que se transfiere a la Organización Estudiantil, el propósito que se solventara con el dinero, el nombre del evento, la fecha en que ocurre la actividad, el lugar en que se realiza el evento y participantes en específicos en caso de haberlo.
 
-  Ademas se establece a quien serán dirigido los dineros, en este caso al Presidente o Secretario de Finanzas de la Organización estudiantil.
+  Además, se establece a quien serán dirigido los dineros, en este caso al Presidente o Secretario de Finanzas de la Organización estudiantil.
 
   Por otra parte, el código de una RU es la unión del año con su número de documento. 
 
-\textbf{Resolución Universitaria(RU)}
+  \textbf{Rendición}
 
-  Documentos(Boletas o facturas)
+  Una rendición es el documento en el cual se da cuenta de todos los gatos que incurrieron en una actividad o evento realizado por la organización universitaria detalladamente. 
+  
+  En el encabezado del documento se debe detallar lo siguiente:
+  
+  \begin{itemize}
+    \item Número de Resolución
+    \item Unidad (por ejemplo, el nombre de la escuela)
+    \item Nombre Jefe Directo (por ejemplo, Director de escuela)
+    \item Responsable del Fondo
+    \item Rut del responsable
+    \item Total solicitado
+    \item Total rendido
+    \item Fono anexo
+    \item email del responsable
+  \end{itemize}
+  
+  En el detalle que debe ir en el documento de rendición para las facturas son:
+  
+  \begin{itemize}
+    \item Número de documento
+    \item Fecha
+    \item Nombre del proveedor
+    \item Descripción
+    \item Monto
+    \item C. Costo
+  \end{itemize}
+  
+  En cuanto al detalle que debe ir en la sección para las boletas con gastos comunes son:
+  
+  \begin{itemize}
+    \item Número de documento
+    \item Fecha
+    \item Nombre del proveedor
+    \item Descripción
+    \item Monto
+  \end{itemize}
+  
+  Mientras que en el detalle que debe ir en la sección para las boletas con gastos individuales son:
+  
+  \begin{itemize}
+    \item Número de documento
+    \item Fecha
+    \item Nombre del proveedor
+    \item Descripción
+    \item Monto
+    \item Total monto de gastos de todas las Categorías por alumno
+    \item Nombre del alumno a reembolsar
+    \item Total reembolso por participante
+  \end{itemize}
+  
+  Además, debe ir un resumen en donde se indique:
+  
+  \begin{itemize}
+    \item Total de gastos
+    \item Más Reintegro por caja
+    \item Total de rendición
+  \end{itemize}
+  
+  Otro de los resúmenes que debe existir es el detalle de reembolso por participante que indique:
+  
+  \begin{itemize}
+    \item Nombre de los participantes
+    \item Monto total por participante
+    \item Total de reembolso
+  \end{itemize}
+  
+  Y por último debe ir la firma del responsable de la rendición y junto con ello debe ir el nombre, el cago que tiene en la organización y en caso de ser una C.A.A. indicar el nombre de la carrera, sino a la facultad que pertenece.
+  
+  Por otra parte se deben adjuntar los documentos originales se encuentran en la rendición y en caso de tener gastos superiores a 3 UTM se deben adjuntar tres cotizaciones ~\cite{5}.
+  
+  
