--- a/Formato Memoria/Capitulo2/2.2.1_Framework.tex
+++ b/Formato Memoria/Capitulo2/2.2.1_Framework.tex
@@ -1,1 +1,5 @@
-ASP.NET Core: es la nueva versión modular del framework .NET, la cual es multiplataforma y Open Source diseñado para la creación de aplicaciones modernas conectadas a Internet, como aplicaciones web y APIs Web.
+\begin{itemize}
+    \item   \begin{description}
+                \item[ASP.NET Core:] es la nueva versión modular del framework .NET, la cual es multiplataforma y Open Source diseñado para la creación de aplicaciones modernas conectadas a Internet, como aplicaciones web y APIs Web.
+            \end{description}    
+\end{itemize}
