--- a/Formato Memoria/memoria.tex
+++ b/Formato Memoria/memoria.tex
@@ -4,6 +4,11 @@
 \newcommand{\grad}{$^{\circ}$}
 %\usepackage[utf8]{inputenc} % Caracteres con acentos.
 
+
+
+
+
+
 %% datos generales y para la tapa
 \titulo{Gestión de fondos para actividades estudiantiles conducidas por CCAA o la Fedeut Curicó en acuerdo a la RU N\grad 2083 de 2017}
 \author{Yorch Sepúlveda}
@@ -66,6 +71,7 @@ Dedicado a ...
 
 %% contenido del segundo capítulo
 \chapter{Antecedentes}
+\subfile{Capitulo2/2_Introduccion}
 	\section{Conceptos}
 		\subfile{Capitulo2/2.1.1_Conceptos}
 
@@ -80,8 +86,9 @@ Dedicado a ...
 		\subfile{Capitulo2/2.3_Metodologia_desarrollo}
 
 	\section{Metodología ágil}
-		\subsection{Melé}
-		\subfile{Capitulo2/2.4.1_Mele}
+	\subfile{Capitulo2/2.4_Metodologia_Agil}
+		\subsection{Scrum}
+		\subfile{Capitulo2/2.4.1_Scrum}
 		\subsection{Roles}
 		\subfile{Capitulo2/2.4.2_Roles}
 		\subsection{Artefactos}
@@ -95,23 +102,24 @@ Dedicado a ...
 		\subfile{Capitulo2/2.5_Pruebas}
 
 	\section{Herramientas de planificación}
-
+		\subfile{Capitulo2/2.6_HerramientasPlanificacion}
+	
 %% contenido del tercer capítulo
 \chapter{Metodología utilizada}
-	\section{Metodología}
-	\subfile{Capitulo3/3.1_Metodologia}
-
+\subfile{Capitulo3/3_Introduccion}
 	\section{Estudio del entorno}
 		\subsection{Las personas}
 		\subsection{La aplicación}
 		\subsection{Las herramientas}
+		\subfile{Capitulo3/3.1.3_Herramientas}
 	
 	\section{La metodología}
+	\subfile{Capitulo3/3.2_Metodologia}
 		\subsection{Roles}
 		\subsection{Aptitudes requeridas}
 		\subsection{El proceso}
 			\subsubsection{El proyecto}
-			\subsubsection{La iiteración}
+			\subsubsection{La iteración}
 			\subsubsection{Las fases}
 		\subsection{Documentación}
 			\subsubsection{Reuniones}
@@ -120,7 +128,7 @@ Dedicado a ...
 %% contenido del Cuarto capítulo
 \chapter{Caracteristicas del sistema}
 	\section{Requisitos del sistema}
-	\subfile{Capitulo3/3.2_Requisitos}
+	\subfile{Capitulo4/4_Requisitos}
 
 %% contenido del quinto capítulo
 \chapter{Diseño de la aplicación}
