--- a/Formato Memoria/Capitulo2/2.2_Tecnologias_Utilizadas.tex
+++ b/Formato Memoria/Capitulo2/2.2_Tecnologias_Utilizadas.tex
@@ -1,7 +1,7 @@
-
+Para resolver el problema mencionado en el capítulo uno, existen muchas tecnologías dentro de las cuales se encuentra, PHP, Ruby on rails, WordPress, Wix, entre otras. Pero para este proyecto se utiliza las siguientes tecnologías: 
 \begin{itemize}
     \item   \begin{description}
-                \item[HTML-Razor:] Lenguaje de marcado de hipertextos que dispone de un conjunto de etiquetas que si son insertadas dentro de un documento este puede mostrar la información a través de un navegador web. 
+                \item[HTML-Razor:] Lenguaje de marcado de hipertextos el cual dispone de un conjunto de etiquetas las cuales son insertadas en un documento que puede mostrar la información a través de un navegador web. 
             \end{description}
 
     \item   \begin{description}
@@ -9,11 +9,11 @@
             \end{description}
 
     \item   \begin{description}
-                \item[Javascript:] Lenguaje de programación interpretado, típicamente utilizado en el desarrollo web para implementar páginas web dinámicas que modifican el DOM de estas.
+                \item[Javascript:] Lenguaje de programación interpretado, el cual es utilizado en el desarrollo web para implementar páginas web dinámicas.
             \end{description}
 
     \item   \begin{description}
-                \item[C\#:] 
+                \item[C\#:] Lenguaje de programación orientado a objetos el cual fue desarrollado por Microsoft para la plataforma dotNET. Su sintaxis básica proviene de c/c++ y es similar a java e incluye mejoras cuyo origen son de otros lenguajes.
             \end{description}
     
 \end{itemize}
