--- a/Formato Memoria/Capitulo2/2.4.3_Artefactos.tex
+++ b/Formato Memoria/Capitulo2/2.4.3_Artefactos.tex
@@ -1,12 +1,11 @@
 \begin{itemize}
     \item   \begin{description}
                 \item[Backlog o retrasos: ] Existen tres tipos, los cuales son el product backlog (retraso del producto), el backlog de versión o release backlog y por último el backlog de sprint (Retraso de sprint), los que se verán con mayor detalle a continuación:
-                 
                 
                 \begin{description}
                     \item[Product backlog: ] lista de requisitos o características del proyecto los cuales proporcionan valor comercial para los stackeholders. Estos requisitos son de alto nivel y no pueden tener detalles de implementación o técnicos. Además, están asociado a una estimación de tiempo y son especificados según los criterios de la organización.
                      
-                    \item[Backlog de versión: ]  consiste en una sublista de tareas extraidas del backlog del producto, las cuales son priorizadas por el product owner en donde deben desarrollarse para la siguente versión del producto. Estas deben ser más detalladas, con mayor precisión en cuanto al tiempo en que demorará en desarrollarse y puede tener observaciones realizadas por los mienbros del equipo.
+                    \item[Backlog de versión: ]  consiste en una sub lista de tareas extraídas del backlog del producto, las cuales son priorizadas por el product owner en donde deben desarrollarse para la siguiente versión del producto. Estas deben ser más detalladas, con mayor precisión en cuanto al tiempo en que demorará en desarrollarse y puede tener observaciones realizadas por los miembros del equipo.
                      
                     \item[Backlog del sprint: ] Son tareas que provienen del backlog de versión y que pueden completarse en periodos cortos de tiempo. En cuanto al desarrollo de estas, deben completarse hasta el final del sprint por los equipos que se comprometieron en realizarlas.
                 \end{description}
@@ -27,3 +26,4 @@
         
             \end{description}
 \end{itemize}
+
