--- a/Formato Memoria/Capitulo3/3.1.3_Herramientas.tex
+++ b/Formato Memoria/Capitulo3/3.1.3_Herramientas.tex
@@ -1,26 +1,9 @@
-Uno de los puntos más críticos al momento de desarrollar un proyecto de software es la elección de la metodología que se utiliza ya que otorga la capacidad de organizar y responder las necesidades el proyecto. Además de que, una vez elegida la metodología no hay vuelta atrás.
-
-Existen muchas metodologías las cuales tienen amplia documentación y han probado ser eficientes para casos en específicos. Los motivos por los cuales se utiliza la metodología ágil Melé son:
-
-\begin{itemize}
-    \item Completa participación del cliente y prueba de funcionalidades para obtener retroalimentación.
-
-    \item Se pueden obtener los cambios y adaptarse al proyecto en cada Sprint.
-
-    \item Como la idea principal es realizar rendiciones y se han aclarado algunos requerimientos, mas no son todos, es que se espera que el proyecto aumente en el proceso de desarrollo. Es por esta incertidumbre que se escoge la metodología Melé, ya que ayuda al cliente y al equipo de trabajo a definir los requisitos del proyecto de modo incremental.
-\end{itemize}
-
-Pero dado a que la metodología está diseñada para utilizarse en equipos de personas, se tuvo que ajustar cada rol con sus responsables a sólo un individuo, debido a que la implementación del sistema está bajo la responsabilidad a una persona.
-
-En cuanto a la duración de cada Sprint, se determina en tres semanas, tiempo relativamente razonable para realizar iteraciones de productos utilizables.
-
 Para el desarrollo de cada Sprint, se utiliza una aplicación gratuita y Open Source llamada Taiga, la cual es una plataforma de gestión de proyectos para diseñadores ágiles.
-
 
 Para comenzar a utilizar esta plataforma se deben registrar las historias de usuarios con su respectiva prioridad (etapa conocida como Product Backlog). Una vez realizado lo anterior, se proceden a crear los Sprint y por último se añaden las historias de usuarios a cada uno de estos tal como se muestra en la \textbf{Figura~\ref{fig: SprintBacklog}} y en caso de ser necesario, una historia del Prooduct Backlog puede ser subdividad para lograr un mejor enfoque y claridad en el desarrollo.
 
 \begin{figure}[h!]
-    \includegraphics[width=\textwidth]{Imagenes/Kanban.png}
+    \includegraphics[width=\textwidth]{Imagenes/SprintBacklog.png}
     \caption{\label{fig: SprintBacklog} Sprint Backlog.}
 \end{figure}
 
@@ -54,3 +37,4 @@ Dado lo anterior es que se divide el proceso de trabajo en cinco columnas como s
     \includegraphics[width=\textwidth]{Imagenes/Kanban.png}
     \caption{\label{fig: kanbanSprint} Proceso de trabajo de un Sprint.}
 \end{figure}
+
