--- a/Formato Memoria/refs.bib
+++ b/Formato Memoria/refs.bib
@@ -77,7 +77,7 @@
 @BOOK{7,
   title = {Ingenieria del software. Un enfoque practico},
   publisher = {Mc Graw Hill},
-  year = {2007},
+  year = {2010},
   author = {Ph.D. Roger S. Pressman},
   keywords = {},
   note = {11 de Octubre de 2018},
@@ -136,4 +136,15 @@
   title = {Rae},
   howpublished = {http://dle.rae.es/?id=6Jix9ml},
   note = {2 de Enero de 2019},
+}
+
+@ARTICLE{17,
+  author = {López Gil, Alba},
+  title = {{Estudio comparativo de metodologías tradicionales y ágiles para proyectos de Desarrollo de Software}},
+  journal = {},
+  year = {2018},
+  volume = {},
+  pages = {95},
+  number = {},
+  note = {14 de Abril de 2019}
 }
